RXN and SIM images no longer clipped
- RXN and SIM images were clipped when panning (unless the user resized window)
- Made changes to css to fill out entire tab-pane and tab-content and size the
  images to the full height/width of the div

--- a/public/app/css/chise.css
+++ b/public/app/css/chise.css
@@ -799,8 +799,13 @@ hr.inspector-divider {
 }
 
 .tab-content{
-    width: inherit;
-    height: inherit;
+    height: 100%;
+    width: 100%;
+}
+
+.tab-pane{
+    height: 100%;
+    width: 100%;
 }
 
 
